--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<h1>SUCCESS</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>募資網站</title>
+  <link rel="stylesheet" href="css/all.css">
+</head>
+<body>
+  <header class="border-bottom border-primary border-5">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light py-3">
+        <div class="container-fluid">
+          <a class="navbar-brand logo me-5" href="#">
+            <!-- <img class="logo" src="./img/logo.jpg" alt="" srcset=""> -->
+            六角拼拼
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active pe-5" aria-current="page" href="#">關於</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-5" href="#">挖寶</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pe-5" href="#">我有個大膽的想法</a>
+              </li>
+            </ul>
+            <div class="d-flex">
+              <button class="btn btn-primary rounded-pill me-3 btn-px-32 fw-bold" data-bs-toggle="modal" data-bs-target="#loginModal" type="submit">登入</button>
+              <button class="btn btn-outline-secondary rounded-pill btn-px-32 fw-bold" type="submit">註冊</button>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+
+  <div class="modal fade" id="loginModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered"">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title fw-bold fs-4">登入</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">帳號</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">密碼</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+              <div id="passwordHelp" class="form-text"><a href="#" class="link-secondary text-decoration-none">忘記密碼？</a></div>
+            </div>
+            <div class="d-grid">
+              <button type="submit" class="btn btn-primary rounded-pill">登入</button>
+            </div>
+          </form>
+        </div>
+        <div class="position-relative m-4">
+          <div class="progress" style="height: 1px;">
+          </div>
+          <p class="position-absolute top-0 start-50 translate-middle bg-white px-3 fs-7">
+            還沒有帳號？ <span class="text-danger">註冊一個帳號</span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+</body>
+</html>
