--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h1 class="fs-2 fw-bold ls-3 mb-4">拍出會動的照片｜LivePhotos 魔法拍立得</h1>
         </div>
         <div class="col-12 col-lg-7">
-          <img class="img-fluid" src="../img/produt_image.jpg" alt="">
+          <img class="img-fluid" src="./img/produt_image.jpg" alt="">
         </div>
       </div>
     </div>
