--- a/index.html
+++ b/index.html
@@ -57,6 +57,65 @@
     </div>
   </section>
 
+  <!-- tab -->
+  <div class="bg-white border-top border-bottom border-1 position-sticky top-0">
+    <div class="container">
+      <ul class="nav" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <a class="nav-link text-font-color py-3 px-md-4 active" id="intro-tab" data-bs-toggle="tab" data-bs-target="#introTabContent" type="button" role="tab" aria-controls="home" aria-selected="true">專案介紹</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link text-font-color py-3 px-md-4" id="qa-tab" data-bs-toggle="tab" data-bs-target="#qaTabContent" type="button" role="tab" aria-controls="profile" aria-selected="false">常見問答</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link text-font-color py-3 px-md-4" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progressTabContent" type="button" role="tab" aria-controls="contact" aria-selected="false">目前進度</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link text-font-color py-3 px-md-4" id="msg-tab" data-bs-toggle="tab" data-bs-target="#cmsgTabContent" type="button" role="tab" aria-controls="contact" aria-selected="false">留言</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- end tab -->
+  <!-- 下方主要內容區塊  -->
+  <div class="container mt-5">
+    <div class="row">
+      <!-- 左邊 tab 區塊 -->
+      <div class="col-md-8">
+        <div class="tab-content" id="myTabContent">
+          <!-- 專案介紹 -->
+          <div class="tab-pane fade show active" id="introTabContent" role="tabpanel" aria-labelledby="intro-tab">
+            <section>
+              <img src="./img/p1.jpg" class="img-fluid w-100" alt="施了魔法的照片" srcset="">
+              <h4 class="ls-2 lh-base mt-4 ps-3 border-start border-primary border-4">施了魔法的照片</h4>
+              <p class="lh-lg mt-2">
+                受就相法大夠局來畫師我只這然以放灣得的後人心年我物我年，或人有動與次出女親構算帶年行著所間女，外成認心香吸工並知日成展源大超時動為生葉衣致長山對精做英密差家他微熱建取示濟定心一，品定把別銀動，深青輪一物加，生明果。西業白老如天有表非民大條全那遊，李文遊、像香過元學須本致信校態麼資司媽人價在它，地他不我計孩廠然不大指勢生的華常簡岸然，人著母病石金萬得一果。
+              </p>
+            </section>
+            <section class="mt-4">
+              <img src="./img/p2.jpg" class="img-fluid w-100" alt="施了魔法的照片" srcset="">
+              <h4 class="ls-2 lh-base mt-4 ps-3 border-start border-primary border-4">留下當下的美好</h4>
+              <p class="lh-lg mt-2">
+                受就相法大夠局來畫師我只這然以放灣得的後人心年我物我年，或人有動與次出女親構算帶年行著所間女，外成認心香吸工並知日成展源大超時動為生葉衣致長山對精做英密差家他微熱建取示濟定心一，品定把別銀動，深青輪一物加，生明果。西業白老如天有表非民大條全那遊，李文遊、像香過元學須本致信校態麼資司媽人價在它，地他不我計孩廠然不大指勢生的華常簡岸然，人著母病石金萬得一果。
+              </p>
+            </section>
+          </div>
+          <!-- 常見問題 -->
+          <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+          <!-- 目前進度 -->
+          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+          <!-- 留言 -->
+          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        </div>
+      </div>
+      <!-- 右邊 card 區塊 -->
+      <div class="col-md-4">
+
+      </div>
+    </div>
+  </div>
+  <!-- 下方主要內容區塊 end -->
+  
 
   <!-- loginModal -->
   <div class="modal fade" id="loginModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
